tests/out/error/if/branch_wrong_return.out
tests/out/error/if/branch_wrong_return.in.bt:1:27 error: branch returns i32, expected string
